--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="projects-grid">
                         <article class="project">
                             <h4>Project Alpha</h4>
-                            <p>This website is my portfolio nad it is my project alpha.</p>
+                            <p>This website is my portfolio and it is my project alpha.</p>
                         </article>
 
                         <article class="project">
